added new formats

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="eyebrow">Builder • Basketball fan • Curious engineer</p>
         <h1>Atharva Tijare</h1>
         <p class="hero-copy">
-          Love turning messy ideas into clean products. Most of what I build sits at the intersection of useful UX, practical engineering, and data-backed decisions.
+          I am a software developer and CS student focused on building clean, reliable products with Python, JavaScript, and SQL. I work across full-stack web and data-driven systems using tools like Node.js, React, PostgreSQL, and Flask, and I am especially interested in backend engineering, AI-assisted features, and scalable infrastructure. I enjoy turning messy ideas into simple user experiences, and I am looking to collaborate on impactful, high-quality software.
         </p>
         <div class="hero-actions">
           <a href="#projects" class="btn btn-primary">See Projects</a>
@@ -156,7 +156,12 @@
       <section id="projects" class="section container">
         <h2>Projects</h2>
         <div class="cards">
-          <article class="card">
+          <article class="card project-card">
+            <a class="repo-link" href="#" target="_blank" rel="noreferrer" aria-label="View WiseWallet repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
             <div class="card-title-row">
               <img src="Images/wisewallet.png" alt="WiseWallet logo" class="card-logo" />
               <h3>
@@ -164,12 +169,23 @@
               </h3>
             </div>
             <p>
-              WiseWallet is a full-stack personal finance web app built to simplify money management through one secure and easy-to-use platform. Users can track income and expenses, organize budgets, and review financial reports that make trends and spending habits more visible.
+              WiseWallet is a full-stack personal finance web app built to simplify money management through one secure and easy-to-use platform.
             </p>
-            <p class="stack">Highlights: JWT authentication, OCR + AI receipt parsing, and dashboard reporting.</p>
-            <p class="stack">Tech: HTML, CSS, JavaScript, Node.js, Express, PostgreSQL</p>
+            <p class="stack">Highlights: Secure auth, AI receipt parsing, smart reporting.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">Node.js</span>
+              <span class="tech-tag tag-2">Express</span>
+              <span class="tech-tag tag-3">PostgreSQL</span>
+              <span class="tech-tag tag-4">JavaScript</span>
+            </div>
           </article>
-          <article class="card">
+          <article class="card project-card">
+            <a class="repo-link" href="https://github.com/atijare/TreeSense" target="_blank" rel="noreferrer" aria-label="View TreeSense repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
             <div class="card-title-row">
               <img src="Images/treesense.png" alt="TreeSense logo" class="card-logo" />
               <h3>
@@ -177,12 +193,23 @@
               </h3>
             </div>
             <p>
-              TreeSense is a web app that classifies tree species from leaf images using a deep learning model, built with a clean front end and a backend API for reliable predictions.
+              TreeSense classifies tree species from leaf images with a clean UI and a reliable prediction API.
             </p>
-            <p class="stack">Tech: React, TypeScript, Vite, Flask, Keras MobileNetV2</p>
-            <p class="stack">Architecture: Server-side API design with Vite proxy routing /api/* requests to the Flask backend.</p>
+            <p class="stack">Highlights: Fast inference, clean UI, model-backed API.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">React</span>
+              <span class="tech-tag tag-2">TypeScript</span>
+              <span class="tech-tag tag-3">Flask</span>
+              <span class="tech-tag tag-4">Keras</span>
+            </div>
           </article>
-          <article class="card">
+          <article class="card project-card">
+            <a class="repo-link" href="https://github.com/atijare/Hoop-Connect" target="_blank" rel="noreferrer" aria-label="View HoopConnect repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
             <div class="card-title-row">
               <img src="Images/hoopconnect.png" alt="HoopConnect logo" class="card-logo" />
               <h3>
@@ -190,10 +217,82 @@
               </h3>
             </div>
             <p>
-              HoopConnect is a front-end NBA web app where fans can explore players, browse teams, and engage through a fan-focused multi-page experience built for smooth and interactive navigation.
+              HoopConnect is an NBA fan experience for exploring players, teams, and game insights.
             </p>
-            <p class="stack">Highlights: Image carousel, player/team browsing, and form validation.</p>
-            <p class="stack">Tech: HTML, CSS, JavaScript, Local JSON Data</p>
+            <p class="stack">Highlights: Player browsing, clean UI, smooth navigation.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">HTML</span>
+              <span class="tech-tag tag-2">CSS</span>
+              <span class="tech-tag tag-3">JavaScript</span>
+              <span class="tech-tag tag-4">JSON</span>
+            </div>
+          </article>
+          <article class="card project-card">
+            <a class="repo-link" href="https://github.com/atijare/BlackJack-Game" target="_blank" rel="noreferrer" aria-label="View Blackjack Game repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
+            <div class="card-title-row">
+              <img src="Images/treesense.png" alt="Blackjack Game logo" class="card-logo" />
+              <h3>Blackjack Game</h3>
+            </div>
+            <p>
+              A simple Python/Tkinter Blackjack game where players can hit, stand, double, or split against a dealer following classic rules.
+            </p>
+            <p class="stack">Highlights: Dealer AI, card graphics, new game + shuffle.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">Python</span>
+              <span class="tech-tag tag-2">Tkinter</span>
+              <span class="tech-tag tag-3">OOP</span>
+              <span class="tech-tag tag-4">Image Assets</span>
+            </div>
+          </article>
+          <article class="card project-card">
+            <a class="repo-link" href="https://github.com/atijare/todo_app" target="_blank" rel="noreferrer" aria-label="View Todo App repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
+            <div class="card-title-row">
+              <img src="Images/todo.png" alt="Todo App logo" class="card-logo" />
+              <h3>Todo App</h3>
+            </div>
+            <p>
+              A simple to-do app that keeps daily routines on track with quick task creation and removal.
+            </p>
+            <p class="stack">Highlights: Quick add/remove, daily workflow, focus on consistency.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">HTML</span>
+              <span class="tech-tag tag-2">CSS</span>
+              <span class="tech-tag tag-3">JavaScript</span>
+              <span class="tech-tag tag-4">Local Storage</span>
+            </div>
+          </article>
+          <article class="card project-card">
+            <a class="repo-link" href="#" target="_blank" rel="noreferrer" aria-label="View Project repository">
+              <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M12 2c-5.52 0-10 4.58-10 10.22 0 4.51 2.86 8.33 6.84 9.68.5.1.68-.22.68-.48 0-.24-.01-.86-.01-1.56-2.78.62-3.37-1.1-3.37-1.1-.45-1.18-1.11-1.5-1.11-1.5-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.55 2.36 1.1 2.94.84.09-.67.35-1.1.64-1.35-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.04 1.03-2.76-.1-.26-.45-1.32.1-2.75 0 0 .84-.27 2.75 1.05A9.36 9.36 0 0 1 12 6.8c.85 0 1.71.12 2.5.35 1.9-1.32 2.75-1.05 2.75-1.05.55 1.43.2 2.49.1 2.75.64.72 1.03 1.64 1.03 2.76 0 3.94-2.35 4.8-4.58 5.05.36.32.69.94.69 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.6.69.48 3.97-1.35 6.83-5.17 6.83-9.68C22 6.58 17.52 2 12 2z" />
+              </svg>
+            </a>
+            <div class="card-title-row">
+              <img src="Images/wisewallet.png" alt="Project logo" class="card-logo" />
+              <h3>Project Six</h3>
+            </div>
+            <p>
+              Short description of your project in one sentence for a clear snapshot.
+            </p>
+            <p class="stack">Highlights: Clear outcome, key feature, user impact.</p>
+            <p class="stack">Tech:</p>
+            <div class="tech-tags">
+              <span class="tech-tag tag-1">React</span>
+              <span class="tech-tag tag-2">Node.js</span>
+              <span class="tech-tag tag-3">MongoDB</span>
+              <span class="tech-tag tag-4">AWS</span>
+            </div>
           </article>
         </div>
       </section>
