added more formats and animations

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               </svg>
             </a>
             <div class="card-title-row">
-              <img src="Images/treesense.png" alt="Blackjack Game logo" class="card-logo" />
+              <img src="Images/blackjack.png" alt="Blackjack Game logo" class="card-logo" />
               <h3>Blackjack Game</h3>
             </div>
             <p>
