--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </ul>
       </nav>
       <section id="top" class="hero container">
-        <p class="eyebrow">Builder • Basketball fan • Curious engineer</p>
+        <p class="eyebrow">Full-stack builder • Backend engineer • Basketball fan</p>
         <h1>Atharva Tijare</h1>
         <p class="hero-copy">
-          I am a software developer and CS student focused on building clean, reliable products with Python, JavaScript, and SQL. I work across full-stack web and data-driven systems using tools like Node.js, React, PostgreSQL, and Flask, and I am especially interested in backend engineering, AI-assisted features, and scalable infrastructure. I enjoy turning messy ideas into simple user experiences, and I am looking to collaborate on impactful, high-quality software.
+          I am a Computer Science student at UNC Charlotte and a software developer focused on building clean, reliable products with Python, JavaScript, and SQL. I work across full-stack web and data-driven systems using tools like Node.js, React, PostgreSQL, and Flask, and I am especially interested in backend engineering, AI-assisted features, and scalable infrastructure. I prototype fast, test ideas in the real world, and refine until it feels effortless. I enjoy turning messy ideas into simple user experiences with good logic under the hood, and I am looking to collaborate on impactful, high-quality software.
         </p>
         <div class="hero-actions">
           <a href="#projects" class="btn btn-primary">See Projects</a>
@@ -45,17 +45,8 @@
     </header>
 
     <main>
-      <section id="about" class="section container">
-        <h2>About Me</h2>
-        <p>
-          I am a Computer Science student at UNC Charlotte, but this site is less about titles and more about how I think: prototype fast, test ideas in the real world, then refine until it feels effortless.
-        </p>
-        <p>
-          I care about software that people actually want to use. That means good logic under the hood and clear, friendly interfaces on top.
-        </p>
-      </section>
-
       <section id="now" class="section container">
+        <p class="section-eyebrow">What I am focused on</p>
         <h2>What I'm Building Now</h2>
         <div class="split-grid">
           <article class="card">
@@ -74,6 +65,7 @@
       </section>
 
       <section id="featured" class="section container">
+        <p class="section-eyebrow">One project story</p>
         <h2>Featured Project Story</h2>
         <article class="card featured-card">
           <div class="card-title-row">
@@ -94,6 +86,7 @@
       </section>
 
       <section id="education" class="section container">
+        <p class="section-eyebrow">Where I studied</p>
         <h2>Education</h2>
         <div class="cards">
           <article class="card">
@@ -109,6 +102,7 @@
       </section>
 
       <section id="experience" class="section container">
+        <p class="section-eyebrow">What I have worked on</p>
         <h2>Experience</h2>
         <div class="timeline">
           <article class="timeline-item card">
@@ -154,6 +148,7 @@
       </section>
 
       <section id="projects" class="section container">
+        <p class="section-eyebrow">What I have worked on</p>
         <h2>Projects</h2>
         <div class="cards">
           <article class="card project-card">
@@ -298,6 +293,7 @@
       </section>
 
       <section id="skills" class="section container">
+        <p class="section-eyebrow">What I work with</p>
         <h2>Core Skills</h2>
         <ul class="skill-list">
           <li>Languages: Python, Java, JavaScript, SQL, C/C++</li>
@@ -308,6 +304,7 @@
       </section>
 
       <section id="contact" class="section container contact">
+        <p class="section-eyebrow">Let’s build something</p>
         <h2>Contact</h2>
         <p>Open to internships, full-time roles, and meaningful collaborations.</p>
         <div class="contact-card">
